<resources>
    <string name="app_name">Renthouse</string>
    <string name="txt_in">Sign in</string>
    <string name="txt_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_insert_email">Insira seu e-mail: </string>
    <string name="txt_user_name">Insira seu nome de usuário: </string>
    <string name="txt_insert_password">Insira sua senha: </string>
    <string name="txt_insert_birth_date">Insira sua data de nascimento: </string>
    <string name="txt_insert_cep">Insira seu CEP: </string>
    <string name="txt_insert_number_residencial">Insira seu Numero residencial: </string>
    <string name="txt_insert_cpf">Insira seu CPF: </string>
    <string name="txt_insert_phone">Insira seu celular: </string>
    <string name="txt_insert_home_phone">Insira seu telefone: </string>
    <string name="txt_confirm_password">Confirme sua senha: </string>
    <string name="txt_back">Voltar </string>
    <string name="txt_name">Nome: </string>
    <string name="txt_email">Email: </string>
    <string name="txt_address">Endereço: </string>
    <string name="txt_password">Senha: </string>
    <string name="txt_wallet_name">Olá Creusa,&#10;você possui </string>
    <string name="txt_wallet1_text2">Na sua carteira </string>
    <string name="txt_button1_wallet1">Carregar mais</string>
    <string name="txt_button2_wallet1">Estornar</string>
    <string name="txt_button1_wallet2">voltar</string>
    <string name="txt_button2_wallet2">carregar</string>
    <string name="txt_wallet2_1">Você possui</string>
    <string name="txt_wallet2_2">Quanto deseja &#10; carregar?</string>
    <string name="txt_wallet2_3">R$</string>
    <string name="txt_next">Próximo</string>
    <string name="txt_devolution">DEVOLUÇÃO</string>
    <string name="txt_withdrawal">RETIRADA</string>
    <string name="txt_change_days">Escolha o intervalo de dias que você quer alugar o item</string>
    <string name="txt_name_creusa">Creusa Silveira</string>
    <string name="txt_delivery">Entrega</string>
    <string name="txt_error_message">Verifique se as informações estão corretas</string>
    <string name="txt_my_profile">Meu Perfil</string>
    <string name="txt_favorite">Favoritos</string>
    <string name="txt_wallet">Carteira</string>
    <string name="txt_bag">Sacola</string>
    <string name="txt_insert_title_product">Inserir o título do anúncio</string>
    <string name="txt_insert_picture_product">Escolher uma foto para o anúncio</string>
    <string name="txt_insert_description_product">Inserir a descrição do anúncio</string>
    <string name="txt_insert_details_product">Inserir os detalhes de uso do anúncio</string>
    <string name="txt_example_pictures_product">Arraste para cá ou selecione os arquivos desejados</string>
    <string name="txt_example_description_product">EX:  Headset Fone de Ouvido Gamer para celular, ps4, ps5, XBox, Pc Gamer, P2 único com controle de volume</string>
    <string name="txt_example_details_product">EX:  Funciona em qualquer equipamento com porta de áuddio Jack de 3,5mm.</string>
    <string name="txt_insert_value_product">Inserir o valor  do produto por dia</string>
    <string name="txt_insert_value_total">Inserir o valor  da multa (Total)</string>
    <string name="txt_insert_tags_product">Inserir as TAGs  do produto</string>
    <string name="txt_games">Games</string>
    <string name="txt_books">Livros</string>
    <string name="txt_music">Música</string>
    <string name="txt_sports">Esportes</string>
    <string name="txt_fantasy">Fantasia</string>
    <string name="txt_insert_type_delivery">Inserir o tipo de entrega</string>
    <string name="txt_only_delivery">Apenas entrega</string>
    <string name="txt_withdrawal_delivery">Retirada ou entrega</string>
    <string name="txt_insert_time_product">Inserir intervalo</string>
    <string name="txt_insert_start_time">Início do anúncio</string>
    <string name="txt_insert_final_time">Fim do anúncio</string>
    <string name="txt_post_product">Postar anúncio</string>
</resources>