<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_insert_email"
            style="@style/BaseEditText"
            android:inputType="textEmailAddress"
            android:id="@+id/cdt_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_user_name"
            style="@style/BaseEditText"
            android:inputType="text"
            android:id="@+id/cdt_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_insert_birth_date"
            style="@style/BaseEditText"
            android:inputType="datetime"
            android:id="@+id/cdt_nascimento"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_insert_cep"
            style="@style/BaseEditText"
            android:inputType="text"
            android:id="@+id/cdt_cep"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_insert_cpf"
            style="@style/BaseEditText"
            android:inputType="text"
            android:id="@+id/cdt_cpf"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_insert_phone"
            style="@style/BaseEditText"
            android:inputType="textPassword"
            android:id="@+id/cdt_celular"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_insert_password"
            style="@style/BaseEditText"
            android:inputType="textPassword"
            android:id="@+id/cdt_senha"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_confirm_password"
            style="@style/BaseEditText"
            android:inputType="textPassword"
            android:id="@+id/cdt_confirma_senha"/>


        <Button
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:outlineSpotShadowColor="@color/white"
            style="@style/BaseButton"
            android:onClick="cadastrar"
            android:text="Cadastrar" />
    </LinearLayout>

</FrameLayout>