<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityCadastro">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/fundo_roxo"
        android:scaleType="fitXY"
        android:contentDescription="Background image"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88111111">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:src="@mipmap/logo_renthouse"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">
                <TextView
                    android:id="@+id/signup_textview"
                    android:onClick="goToSigninActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_in"
                    style="@style/BaseText"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_up"
                    style="@style/BaseText"
                    android:shadowRadius="25"
                    android:shadowColor="@color/white"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_insert_email"
                        style="@style/BaseEditText"
                        android:inputType="textEmailAddress"
                        android:id="@+id/cdt_email"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_user_name"
                        style="@style/BaseEditText"
                        android:inputType="text"
                        android:id="@+id/cdt_name"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_insert_birth_date"
                        style="@style/BaseEditText"
                        android:inputType="date"
                        android:id="@+id/cdt_nascimento"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_insert_cep"
                        style="@style/BaseEditText"
                        android:inputType="number"
                        android:id="@+id/cdt_cep"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_insert_number_residencial"
                        style="@style/BaseEditText"
                        android:inputType="number"
                        android:id="@+id/cdt_numero_residencia"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_insert_cpf"
                        style="@style/BaseEditText"
                        android:inputType="number"
                        android:id="@+id/cdt_cpf"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Insira seu telefone "
                        style="@style/BaseEditText"
                        android:inputType="phone"
                        android:id="@+id/cdt_telefone"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_insert_password"
                        style="@style/BaseEditText"
                        android:inputType="textPassword"
                        android:id="@+id/cdt_senha"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_confirm_password"
                        style="@style/BaseEditText"
                        android:inputType="textPassword"
                        android:id="@+id/cdt_confirma_senha"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        style="@style/TextError"
                        android:id="@+id/text_error_cadastro"/>

                    <Button
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:outlineSpotShadowColor="@color/white"
                        style="@style/BaseButton"
                        android:onClick="goToSigninActivityCadastro"
                        android:text="Cadastrar" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
