<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModalHomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/fundo_roxo"
        android:contentDescription="Background image"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E1000000"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <fragment
            android:id="@+id/frag_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            class="school.sptech.renthouse.BackFragment"/>
        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:gravity="center_horizontal|center"
            android:layout_marginTop="100dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_my_profile"
                style="@style/BaseTextModal"
                android:onClick="goToPerfil"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_favorite"
                style="@style/BaseTextModal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_wallet"
                style="@style/BaseTextModal"
                android:onClick="goToCarteira"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bag"
                style="@style/BaseTextModal"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>