<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_wallet2">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Background image"
            android:src="@mipmap/fundo_roxo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#88111111"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/material_dynamic_primary40"
                >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center|bottom"
                >

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="150dp"
                    android:gravity="center|top"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_wallet2_1"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            style="@style/BaseText"
                            >
                        </TextView>
                        <TextView
                            android:layout_width="125dp"
                            android:layout_height="50dp"
                            android:background="@color/white"
                            style="@style/BaseEditText"
                            android:id="@+id/valorCarteira"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/txt_wallet1_text2"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        style="@style/BaseText"
                        android:gravity="center_horizontal"
                        android:layout_marginRight="40dp"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_wallet2_2"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    style="@style/BaseText"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                >
                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_wallet2_3"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        style="@style/BaseText"
                        >
                    </TextView>
                    <EditText
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:background="@color/white"
                        android:id="@+id/recarga"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center|bottom">

                <Button
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    style="@style/BaseButton"
                    android:text="@string/txt_button1_wallet2"
                    android:textSize="12sp"
                    android:layout_marginRight="20dp">

                </Button>
                <Button
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    style="@style/BaseButton"
                    android:text="@string/txt_button2_wallet2"
                    android:textSize="12sp"
                    android:onClick="goToRechargeWallet">
                </Button>
            </LinearLayout>


        </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>